--- a/index.html
+++ b/index.html
@@ -148,6 +148,57 @@
         width: fit-content;
     }
 
+    /* Volume Sidebar - Desktop Only */
+    #desktop-volume-ctrl {
+        position: fixed;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        background: rgba(0, 0, 0, 0.8);
+        padding: 15px 10px;
+        border: 2px solid var(--gold-color);
+        border-radius: 30px;
+        z-index: 10001;
+        box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+
+    #mute-btn {
+        background: none;
+        border: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+        color: var(--gold-color);
+        transition: transform 0.1s;
+    }
+
+    #mute-btn:active { transform: scale(1.2); }
+
+    /* Vertical Slider Setup */
+    .slider-container {
+        height: 150px;
+        display: flex;
+        align-items: center;
+    }
+
+    #volume-slider {
+        writing-mode: bt-lr; /* Vertical for some browsers */
+        appearance: slider-vertical; /* Vertical for others */
+        width: 8px;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    /* Hide on mobile/tablets */
+    @media (max-width: 1024px) {
+        #desktop-volume-ctrl {
+            display: none;
+        }
+    }
+
     /* Small screen fallback to prevent buttons from disappearing off-edge */
     @media (max-width: 430px) {
         :root {
@@ -485,6 +536,14 @@
               <span class="btn-label">Cancel</span>
               <div class="btn" style="background-color: #622127; display: flex; align-items: center; justify-content: center; font-size: 3rem;" onclick="Game.confirmAction(false)">❌</div>
           </div>
+      </div>
+  </div>
+
+  <!-- Volume Sidebar for Desktop -->
+  <div id="desktop-volume-ctrl">
+      <button id="mute-btn" onclick="Game.toggleMute()">🔊</button>
+      <div class="slider-container">
+          <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="1" oninput="Game.setVolume(this.value)">
       </div>
   </div>
 
