--- a/index.html
+++ b/index.html
@@ -206,7 +206,18 @@
     #click-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 1000; display: flex; justify-content: center; align-items: center; flex-direction: column; cursor: pointer; }
 
     #event-overlay {
-        position: absolute; inset: -10px; background-color: rgba(0,0,0,0.6); background-image: url('assets/newtime.avif'); background-repeat: no-repeat; background-position: center; background-size: cover; z-index: 900; border-radius: 20px; box-shadow: 0 0 15px #000; display: none; flex-direction: column; justify-content: center; align-items: center;
+        position: fixed;      /* Pulls it out of the quadrant to cover the WHOLE screen */
+        inset: 0;             /* Stretches to all 4 corners */
+        z-index: 9999;        /* Sits on top of all buttons */
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba(0,0,0,0.7); /* Blocks clicks & dims the background */
+        background-image: url('assets/newtime.avif');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 300px 300px; /* Keeps the image height fixed at 300px */
     }
     #event-text { font-size: 1.8rem; color: var(--gold-color); text-shadow: 3px 3px 0 #000; text-align: center; font-weight: bold; background: rgba(0,0,0,0.6); padding: 10px; border-radius: 10px; max-width: 90%; }
 
