--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
     .btn-swamp { background-image: url('assets/swamp.avif'); }
     .btn-underground { background-image: url('assets/underground.avif'); }
     .btn-water { background-image: url('assets/water.avif'); }
+    .btn-wasteland { background-image: url('assets/wasteland.avif'); }
 
     .btn-start { background-image: url('assets/start.avif'); }
     .btn-resource { background-image: url('assets/resource.avif'); }
@@ -424,6 +425,9 @@
           <div class="btn-wrapper"><span class="btn-label">Swamp</span><div class="btn btn-swamp" onclick="Game.applyThemeSelection('swamp')"></div></div>
           <div class="btn-wrapper"><span class="btn-label">Underground</span><div class="btn btn-underground" onclick="Game.applyThemeSelection('underground')"></div></div>
           <div class="btn-wrapper"><span class="btn-label">Water</span><div class="btn btn-water" onclick="Game.applyThemeSelection('water')"></div></div>
+
+          <div class="btn-wrapper"></div>
+          <div class="btn-wrapper"><span class="btn-label">Wasteland</span><div class="btn btn-wasteland" onclick="Game.applyThemeSelection('wasteland')"></div></div>
       </div>
   </div>
 
